[package]
name = "jtlstats"
version = "0.2.0"
edition = "2021"

[dependencies]
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
crossbeam-channel = "0.5"
num_cpus = "1.16"
hdrhistogram = "7"
anyhow = "1"
serde_json = "1.0"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = "z"
strip = true
panic = "abort"
