[package]
name = "jtlstats"
version = "0.2.0"
edition = "2021"

[features]
default = []
verbose = []

[dependencies]
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
num_cpus = "1.16"
hdrhistogram = "7"
anyhow = "1"
serde_json = "1.0"
memmap2 = "0.9"
bstr = "1.10"
ahash = "0.8"
chrono = "0.4"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = "z"
strip = true
panic = "abort"
